<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">inClass03</string>
    <string name="hello_world">Hello world!</string>
    <string name="hintEmail">Email</string>
    <string name="hintName">Name</string>
    <string name="tv_pl">Favorite Programming Language:</string>
    <string name="radio_btn_Java">Java</string>
    <string name="radio_btn_C">C</string>
    <string name="Radio_btn_Cs">C#</string>
    <string name="tv_acc_sear">Account is searchable</string>
    <string name="tv_mood">Your current mood:</string>
    <string name="btnSubmit">Submit</string>
    <string name="title_activity_display">Display Activity</string>
    <string name="action_settings">Settings</string>
    <string name="tv_student_info">Student Information</string>
    <string name="txtName">Name:</string>
    <string name="txtEmail">Email:</string>
    <string name="txt_pl">Prog. Language:</string>
    <string name="txt_state">Account State:</string>
    <string name="txt_mood">Mood:</string>
    <string name="title_activity_edit">Edit Activity</string>

</resources>
