<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mad.inclass03.DisplayActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/tv_student_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="46dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="46dp"
            android:layout_weight="0.61"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewrow11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtName" />

            <TextView
                android:id="@+id/textViewrow12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <ImageView
                android:id="@+id/imageViewrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_edit" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="46dp"
            android:layout_weight="0.61"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewrow21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEmail" />

            <TextView
                android:id="@+id/textViewrow22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <ImageView
                android:id="@+id/imageViewrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_edit" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="46dp"
            android:layout_weight="0.61"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewrow31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pl" />

            <TextView
                android:id="@+id/textViewrow32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <ImageView
                android:id="@+id/imageViewrow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_edit" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="46dp"
            android:layout_weight="0.61"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewrow41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_state" />

            <TextView
                android:id="@+id/textViewrow42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <ImageView
                android:id="@+id/imageViewrow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_edit" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="46dp"
            android:layout_weight="0.61"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewrow51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_mood" />

            <TextView
                android:id="@+id/textViewrow52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <ImageView
                android:id="@+id/imageViewrow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_edit" 
                android:layout_gravity="right"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>